# scaffold

./: .env.example  .gitignore  README.md  alembic.core.ini  list_queue.sh  nixpacks.toml  project-schema.md  pyproject.toml  railpack.json  release_and_push.sh
deploy/migrations/: railway.json
docs/: QUEUE_PIPELINE_MIGRATION.md
migrations/core/: env.py
migrations/core/versions/: 0001_candidate.py  0002_company.py  0003_ats.py  0004_search.py  0005_job.py  0006_resume.py  0007_match.py  0008_application.py  0009_billing.py  0010_tracking.py  0011_professional_taxonomy.py  0012_job_professional_entities.py
scripts/: seederCandidate.py  seederProfessionalTaxonomy.py  seederProfessionalTaxonomyCbo.py
src/scaffold/: base.py  config.py
src/scaffold/ai/: __init__.py  client.py  contracts.py  factory.py  formatters.py  groq.py  memory.py  ports.py
src/scaffold/cache/: __init__.py  client.py  factory.py  memory.py  ports.py  redis.py  session_store.py  sync.py  transient_retry.py
src/scaffold/constants/: __init__.py  schema_enums.py
src/scaffold/db/: conventions.py  mysql_url.py  session.py  types.py
tests/: test_ai_client.py  test_ats_repositories.py  test_cache_client.py  test_cache_session_store.py  test_job_repositories.py  test_logging_payload.py  test_messaging_memory.py  test_messaging_optional_dependency.py  test_messaging_rabbitmq.py  test_messaging_resilience.py  test_messaging_worker.py  test_mysql_url.py  test_professional_taxonomy_normalization.py  test_professional_taxonomy_schema.py  test_queue_client.py  test_storage_client.py
(+120 files in other folders)
